[gd_scene load_steps=8 format=2]

[ext_resource path="res://Player.gd" type="Script" id=1]
[ext_resource path="res://Pepper.png" type="Texture" id=2]

[sub_resource type="RectangleShape2D" id=2]

custom_solver_bias = 0.0
extents = Vector2( 30.358, 32.0632 )

[sub_resource type="Animation" id=3]

resource_name = "ui_down"
length = 0.8
loop = false
step = 0.1
tracks/0/type = "value"
tracks/0/path = NodePath("../Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.2, 0.4, 0.6 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 1,
"values": [ 7, 8, 6, 7 ]
}

[sub_resource type="Animation" id=5]

resource_name = "ui_left"
length = 0.8
loop = false
step = 0.1
tracks/0/type = "value"
tracks/0/path = NodePath("../Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.2, 0.4, 0.6 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 1,
"values": [ 10, 11, 9, 10 ]
}

[sub_resource type="Animation" id=6]

resource_name = "ui_right"
length = 0.8
loop = false
step = 0.1
tracks/0/type = "value"
tracks/0/path = NodePath("../Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.2, 0.4, 0.6 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 1,
"values": [ 4, 5, 3, 4 ]
}

[sub_resource type="Animation" id=4]

resource_name = "ui_up"
length = 0.8
loop = false
step = 0.1
tracks/0/type = "value"
tracks/0/path = NodePath("../Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.2, 0.4, 0.6 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 1,
"values": [ 1, 2, 0, 1 ]
}

[node name="Player" type="KinematicBody2D" index="0"]

position = Vector2( 32.0386, 32.1917 )
input_pickable = false
collision_layer = 1
collision_mask = 1
collision/safe_margin = 0.08
script = ExtResource( 1 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="." index="0"]

position = Vector2( -0.165001, 0 )
scale = Vector2( 1.05604, 1 )
shape = SubResource( 2 )
_sections_unfolded = [ "Transform", "Visibility" ]

[node name="Sprite" type="Sprite" parent="." index="1"]

scale = Vector2( 2, 2 )
texture = ExtResource( 2 )
vframes = 4
hframes = 3
frame = 7
_sections_unfolded = [ "Animation", "Transform" ]

[node name="AnimationPlayer" type="AnimationPlayer" parent="." index="2"]

root_node = NodePath("")
autoplay = ""
playback_process_mode = 1
playback_default_blend_time = 0.0
playback_speed = 1.0
anims/ui_down = SubResource( 3 )
anims/ui_left = SubResource( 5 )
anims/ui_right = SubResource( 6 )
anims/ui_up = SubResource( 4 )
blend_times = [  ]

[node name="MoveTween" type="Tween" parent="." index="3"]

repeat = false
playback_process_mode = 1
playback_speed = 1.0
playback/active = false
playback/repeat = false
playback/speed = 1.0

[node name="RayCastDown" type="RayCast2D" parent="." index="4"]

enabled = true
exclude_parent = true
cast_to = Vector2( 0, 64 )
collision_mask = 1

[node name="RayCastLeft" type="RayCast2D" parent="." index="5"]

enabled = true
exclude_parent = true
cast_to = Vector2( -64, 0 )
collision_mask = 1

[node name="RayCastUp" type="RayCast2D" parent="." index="6"]

enabled = true
exclude_parent = true
cast_to = Vector2( 0, -64 )
collision_mask = 1

[node name="RayCastRight" type="RayCast2D" parent="." index="7"]

enabled = true
exclude_parent = true
cast_to = Vector2( 64, 0 )
collision_mask = 1

[connection signal="tween_completed" from="MoveTween" to="." method="_on_MoveTween_tween_completed"]


